# Nebula

Assets/: README.md
Docs/: README.md
Game/: README.md
Game/server/gate_server/: remake_gate
Lib/: address.proto  event.exp  event.lib  event_core.exp  event_core.lib  event_extra.exp  event_extra.lib  event_openssl.exp  event_openssl.lib  proto_c++.bat
Lib/test/: address.pb.cc
Source/: README.md
Source/client/: ogre_test.vcxproj
Source/client/src/: Example25FrameListener.cpp  TutorialApplication.cpp  TutorialApplication.h  address.pb.cc  address.pb.h
Source/opengl/glad/src/: glad.c
Source/opengl/glfw-3.3.4/include/glad/: glad.h
Source/opengl/glfw-3.3.4/lib/: glfw3.lib
Source/opengl/shader/glsl/: glsl.sln
Source/opengl/shader/glsl/glsl/: glsl.vcxproj  glsl.vcxproj.filters  main.cpp  shader_s.h
Source/proj/: gate_server.sln  gate_server.vcproj  gate_server.vcxproj
Source/server/: rebuild
Source/server/client/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  client.cpp  client.h  client.sln  client.vcxproj  client.vcxproj.filters  cmake_install.cmake  main.cpp
Source/server/common/: CMakeLists.txt  README.md  YLH_Server.cpp  YLH_Server.h  client_sock.cpp  client_sock.h  client_sock_manager.cpp  client_sock_manager.h  server_config.cpp  server_config.h  server_config_manager.cpp  server_config_manager.h  server_define.h
Source/server/game_server/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  LogicThread.cpp  LogicThread.h  LogicThreadManager.cpp  LogicThreadManager.h  Server.cpp  Server.h  TODO.txt  ThreadMsg.cpp  ThreadMsg.h  address.pb.h  game_server.sln  game_server.vcxproj  game_server.vcxproj.filters  main.cpp  protobuf_example.cpp  protobuf_example.h
Source/server/gate_server/: CMakeLists.txt  README.md  client.cpp  client_info.cpp  client_info.h  client_info_manager.cpp  client_info_manager.h  main.cpp  player.cpp  player.h  server.cpp  server.h
Source/server/protocol/: build_proto  common.proto  msg.proto
Temp/: README.md
Test/: README.md
